force-app/main/default/objects/AI_Usage_Limit__mdt/AI_Usage_Limit__mdt.object-meta.xml
<CustomObject>
    <label>AI Usage Limit</label>
    <pluralLabel>AI Usage Limits</pluralLabel>
</CustomObject>