force-app/main/default/objects/AI_Usage_Limit__mdt/fields/Daily_Request_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Request_Limit__c</fullName>
    <description>Maximum number of AI requests allowed per day.</description>
    <label>Daily Request Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>