force-app/main/default/objects/AI_Usage_Limit__mdt/fields/License_Tier__c.field-meta.xml
<CustomField>
    <fullName>License_Tier__c</fullName>
    <description>License tier governed by this AI usage limit.</description>
    <label>License Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>